# KernelWatch

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  lefthook.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.sh
src/driver_search/: __init__.py  analyzer.py  cli.py  config.py  db.py  models.py  monitor.py
src/driver_search/analysis/: disasm.py  pe.py
src/driver_search/output/: json.py  loldrivers.py  yara.py
src/driver_search/sources/: __init__.py  base.py  loldrivers.py  nvd.py  vendors.py  virustotal.py  wucatalog.py
src/driver_search/utils/: hashing.py
src/kernel_watch/: __init__.py  analyzer.py  cli.py  config.py  db.py  models.py  monitor.py
src/kernel_watch/analysis/: __init__.py  disasm.py  pe.py
src/kernel_watch/output/: json.py  loldrivers.py  yara.py
src/kernel_watch/sources/: base.py  loldrivers.py  nvd.py  vendors.py  virustotal.py  wucatalog.py
src/kernel_watch/utils/: hashing.py  http.py
tests/: test_analysis.py  test_db.py  test_integration.py  test_output.py  test_sources.py  test_utils.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src/components/: icons.tsx  primitives.tsx
ui/src/lib/: sidecar.ts  styles.ts
ui/src/views/: Analyze.tsx  Dashboard.tsx  Monitor.tsx  Search.tsx  Settings.tsx
