[project]
name = "kernel-watch"
version = "0.1.0"
description = "Proactive vulnerable driver research tooling for blocklist contribution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pefile>=2024.8",
    "capstone>=5.0",
    "signify>=0.7",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.5",
    "types-pyyaml",
    "types-beautifulsoup4",
]

[project.scripts]
kernel-watch = "driver_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/driver_search"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "S",      # flake8-bandit (security)
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "ARG001",  # unused function argument (stubs have these)
    "ARG002",  # unused method argument (stubs have these)
    "PLC0415", # import not at top level (lazy imports for optional deps)
    "S110",    # try-except-pass (intentional for optional features)
    "S101",    # assert usage (fine in non-critical paths)
    "TCH003",  # move stdlib import to type-checking block (noisy)
    "PTH123",  # open() vs Path.open() (minor style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["driver_search"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pefile.*",
    "capstone.*",
    "signify.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "lefthook>=2.0.15",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20250915",
]
